fix: navigation mobile, header, body

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,13 +87,8 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #f4f4f4;
+  background-color: #000000;
 }
 
 a {
@@ -101,8 +96,3 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
